#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ToDoize], [0.0], [cthuun@cthuun.fr])

# Checks for programs.
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/tests/Makefile])
AC_CHECK_HEADERS([stdio.h])
AM_INIT_AUTOMAKE

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
